if(IS_DIRECTORY /lib/systemd/system)
    message(STATUS "Configured systemd unit" )
    install(DIRECTORY DESTINATION "/etc/sproxy")
    configure_file(${PROJECT_SOURCE_DIR}/systemd/sproxy@.service.cmake ${PROJECT_BINARY_DIR}/systemd/sproxy@.service)
    configure_file(${PROJECT_SOURCE_DIR}/systemd/sproxy.service.cmake ${PROJECT_BINARY_DIR}/systemd/sproxy.service)
    configure_file(${PROJECT_SOURCE_DIR}/systemd/sproxy-http.socket.cmake ${PROJECT_BINARY_DIR}/systemd/sproxy-http.socket)
    configure_file(${PROJECT_SOURCE_DIR}/systemd/sproxy-ssl.socket.cmake ${PROJECT_BINARY_DIR}/systemd/sproxy-ssl.socket)
    if(HAVE_QUIC)
        configure_file(${PROJECT_SOURCE_DIR}/systemd/sproxy-quic.socket.cmake ${PROJECT_BINARY_DIR}/systemd/sproxy-quic.socket)
    endif()
    install(FILES ${PROJECT_BINARY_DIR}/systemd/sproxy@.service DESTINATION /lib/systemd/system)
    install(FILES ${PROJECT_BINARY_DIR}/systemd/sproxy.service DESTINATION /lib/systemd/system)
    install(FILES ${PROJECT_BINARY_DIR}/systemd/sproxy-http.socket DESTINATION /lib/systemd/system)
    install(FILES ${PROJECT_BINARY_DIR}/systemd/sproxy-ssl.socket DESTINATION /lib/systemd/system)
    if(HAVE_QUIC)
        install(FILES ${PROJECT_BINARY_DIR}/systemd/sproxy-quic.socket DESTINATION /lib/systemd/system)
    endif()
endif()
